Minor comment updates

--- a/taxi-use-case.ipynb
+++ b/taxi-use-case.ipynb
@@ -228,7 +228,7 @@
     "\n",
     "We send one of these TopN queries for each row in the passenger_count frame, intersecting with the total_amount_dollars frame. We then compute one average(total_amount) from each of these queries. The denominator is the sum of `count` values. The numerator is the sum of `count` values, weighted by the corresponding total_amount value, which is approximately equal to the row ID (`key` in the result). This works because of our schema which maps fare values to row IDs by rounding to the nearest integer. \n",
     "\n",
-    "Note: this calculation is approximate.\n",
+    "Note: this calculation is approximate. However, it should produce a reasonable estimate, as long as the distribution of fare values is somewhat well behaved. Yellow taxi fares, for example, are not quite uniform, but they aren't skewed in a way that should badly skew this estimate.\n",
     "\n",
     "Pilosa also supports storage of scalar attributes per row or column; exact fare value can be stored this way. One feature on the Pilosa roadmap is to support aggregation over these attributes. When this is available, the averages in this query can be calculated internally.\n",
     "\n",
@@ -410,7 +410,7 @@
     "\n",
     "We can get the \"quick guess\" by sending TopN queries for each of the three frames, then combining the results, estimating the maximum possible size of the intersection as the minimum count of the three rows. We then sort this list on the size guess, and check the actual size in descending order. \n",
     "\n",
-    "Generating the full result in this way is somewhat slow, but getting the top few rows is quick. The implementation here also sends the second group of requests serially, for simplicity - batching or parallelizing these would improve efficiency. \n",
+    "Generating the full result in this way is somewhat slow, but getting the top few rows is quick. The implementation here also sends the second group of requests serially, for simplicity - batching or parallelizing these would improve efficiency. That's exactly what we've done in our taxi demo (https://github.com/pilosa/demo-taxi/), which is a slightly more presentable version of these queries.\n",
     "\n",
     "This should produce a result like the following:\n",
     "\n",
