Avoid divide by zero

--- a/taxi-use-case.ipynb
+++ b/taxi-use-case.ipynb
@@ -300,7 +300,10 @@
     "    # the key itself as the value or weight in the average calculation. \n",
     "    wsum = sum([r['count'] * r['id'] for r in topn])\n",
     "    count = sum([r['count'] for r in topn])\n",
-    "    average_amounts.append(float(wsum)/count)\n",
+    "    if count == 0:\n",
+    "        pcounts.remove(pcount)\n",
+    "    else:\n",
+    "        average_amounts.append(float(wsum)/count)\n",
     "t2 = time.time()\n",
     "\n",
     "# Display results\n",
